--- a/social_media.html
+++ b/social_media.html
@@ -140,9 +140,6 @@
     <div class="wrapper">
 
       <!-- Start blog Icon -->
-      <div id="blog" onclick="navigate(this.id)" class="fill  blog">
-        <span class="icon"><i class="fa-solid fa-blog"></i></span>
-      </div>
       <!-- End blog Icon -->
 
 
@@ -168,30 +165,18 @@
 
 
       <!-- Start linkedin Icon -->
-      <div id="linkedin" onclick="navigate(this.id)" class="fill linkedin">
-        <span class="icon"><i class="fab fa-linkedin"></i></span>
-      </div>
       <!-- End linkedin Icon -->
 
 
       <!-- Start twitter Icon -->
-      <div id="twitter" onclick="navigate(this.id)" class="fill twitter">
-        <span class="icon"><i class="fab fa-twitter"></i></span>
-      </div>
       <!-- End twitter Icon -->
 
 
       <!-- Start reddit Icon -->
-      <div id="reddit" onclick="navigate(this.id)" class="fill reddit">
-        <span class="icon"><i class="fab fa-reddit"></i></span>
-      </div>
       <!-- End reddit Icon -->
 
 
       <!-- Start tiktok Icon -->
-      <div id="tiktok" onclick="navigate(this.id)" class="fill tiktok">
-        <span class="icon"><i class="fab fa-tiktok"></i></span>
-      </div>
       <!-- End tiktok Icon -->
 
       <!-- Start youtube Icon -->
@@ -201,16 +186,10 @@
       <!-- End youtube Icon -->
 
       <!-- Start pinterest Icon -->
-      <div id="pinterest" onclick="navigate(this.id)" class="fill pinterest">
-        <span class="icon"><i class="fab fa-pinterest"></i></span>
-      </div>
       <!-- End pinterest Icon -->
 
 
       <!-- Start telegram Icon -->
-      <div id="telegram" onclick="navigate(this.id)" class="fill telegram">
-        <span class="icon"><i class="fab fa-telegram"></i></span>
-      </div>
       <!-- End telegram Icon -->
 
 
@@ -228,13 +207,13 @@
           window.open("https://blog.shorouk.dev", '_blank').focus(); //Add the url to your blog
 
         else if (id === "email") {
-          window.open("mailto:someone@yoursite.com", '_blank').focus(); //Add your email after "mailto:""
+          window.open("https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox", '_blank').focus(); //Add your email after "mailto:""
         }
         else if (id === "facebook") {
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("instagram.com", '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/?hl=zh-tw", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
@@ -249,7 +228,7 @@
           window.open("https://www.tiktok.com/", '_blank').focus(); //Add the url to your tiktok account
         }
         else if (id === "youtube") {
-          window.open("https://www.youtube.com/", '_blank').focus(); //Add the url to your youtube account
+          window.open("https://www.youtube.com/feed/subscriptions", '_blank').focus(); //Add the url to your youtube account
         }
         else if (id === "pinterest") {
           window.open("https://www.pinterest.com/", '_blank').focus(); //Add the url to your pinterest account
