--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -10,7 +10,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #ff0000;
+            color: #FF0000;
             text-align: center;
                 max-width: 95%;
             margin: auto;
