--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -10,7 +10,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #976D57; //可以改字的顏色
+            color: #000000; //可以改字的顏色
             text-align: center;
                 max-width: 95%;
             margin: auto;
