--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -10,14 +10,14 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #000000; //可以改字的顏色
+            color: #976D57;                       
             text-align: center;
                 max-width: 95%;
             margin: auto;
             font-variant-caps: petite-caps;
             font-size: 2em;
 
-        }
+        }//change text color
 
         div {
              width: 95%;
