--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -10,7 +10,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #976D57;                       
+            color: #976D57;<!--change text color-->            
             text-align: center;
                 max-width: 95%;
             margin: auto;
@@ -46,7 +46,8 @@
 
 
 <script>
-
+    
+<!--change quotes-->
 quotes=[
 "Learning, like success, is anything but a linear process",
 "I am in competition with no one. I have no desire to play the game of being better than anyone. I am simply trying to be better than the person I was yesterday.",
