--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -10,7 +10,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #976D57;<!--change text color-->            
+            color: #976D57;           
             text-align: center;
                 max-width: 95%;
             margin: auto;
@@ -47,10 +47,10 @@
 
 <script>
     
-<!--change quotes-->
+
 quotes=[
-"test1",
-"I am in competition with no one. I have no desire to play the game of being better than anyone. I am simply trying to be better than the person I was yesterday.",
+"這個世界上能隨心所欲的並不多",
+"有價值的事往往不會太容易",
 "If you want to be interesting, you have to be interested.",
 "It's supposed to be hard. If it were easy, everyone would do it.",
 "Don’t worry if you’re not where you want to be yet. Great things take time. ",
