--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -51,17 +51,26 @@
 quotes=[
 "這個世界上能隨心所欲的並不多",
 "有價值的事往往不會太容易",
-"If you want to be interesting, you have to be interested.",
-"It's supposed to be hard. If it were easy, everyone would do it.",
-"Don’t worry if you’re not where you want to be yet. Great things take time. ",
-"If it's important you'll find a way. If it's not, you'll find an excuse.",
-"Most people overestimate what they can do in one year and underestimate what they can do in ten years.",
-"A goal without a plan is just a wish.",
-"change your 24 hours and you'll change your life",
-"Stop thinking you are not qualified, not fit, or not experienced enough,",
-"Growth takes place when you start doing stuff you are not qualified to do.",
-"Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.",
-"Twenty years from now you will be more disappointed by the things that you didn't do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.",
+"成長是階梯式的，不會立竿見影，或許差一步就成功了！",
+"最大的自由就是自律",
+"活在當下，熱愛生活，由心選擇",
+"把所有的不快給昨天，把所有的希望給明天，把所有的努力給今天",
+"懶惰是痛苦的來源，不要成為慾望的奴隸，不被誘惑，不拖延，自律＞成功",
+"不要執著於過去，不要安逸於現在，更不要過度擔心未來",
+"努力是為了用自己喜歡的方式過一生",
+"清醒時做事、迷茫時讀書、獨處時思考；煩躁時運動、焦慮時淨心、得意時淡然；失意時坦然、忙碌時專注、閒暇時蓄力。",
+"不做，會想一輩子；做了，會講一輩子。",
+"心態是最好的風水",
+"做你沒做過的事情叫成長,做你不願意做的事情叫改變, 做你不敢做的事情叫突破。---巴菲特",
+"不行動會孕育懷疑與恐懼；行動會孕育信心與勇氣。---戴爾．卡內基",
+"清醒時做事、迷茫時讀書、獨處時思考；煩躁時運動、焦慮時淨心、得意淡然；失意時坦然、忙碌時專注",
+"允許一切發生",
+"你怎麼過一天，就怎麼過一生",
+"活著就是勝利，賺錢只是遊戲，健康才是目的，快樂才是真諦",
+"睡前原諒一切，醒來便是重生",
+"大膽一點，反正你只活一次",
+"對的事情，就該堅持!",
+"讀過的書，記得的成為知識，不記得的成為氣質。---未央"
 ];
 
 const INTERVAL = 86400000;
