--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -8,9 +8,9 @@
 
     <style>
 
-        .widget {
+        .widget { 
             padding: 5px 5px ;
-            color: #976D57;           
+            color: #976D57;  /*change text color*/       
             text-align: center;
                 max-width: 95%;
             margin: auto;
@@ -20,6 +20,7 @@
         }
 
         div {
+            
              width: 95%;
              min-height: 100px;
 
@@ -46,8 +47,7 @@
 
 
 <script>
-    
-
+ //change text color
 quotes=[
 "這個世界上能隨心所欲的並不多",
 "有價值的事往往不會太容易",
