--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -25,8 +25,8 @@
              min-height: 100px;
 
             background:
-                linear-gradient(to right, black 4px, transparent 4px) 0 0,
-                linear-gradient(to right, black 4px, transparent 4px) 0 100%,
+                linear-gradient(to right, orange 4px, transparent 4px) 0 0,
+                linear-gradient(to right, purple 4px, transparent 4px) 0 100%,
                 linear-gradient(to left, black 4px, transparent 4px) 100% 0,
                 linear-gradient(to left, black 4px, transparent 4px) 100% 100%,
                 linear-gradient(to bottom, black 4px, transparent 4px) 0 0,
