--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -15,7 +15,7 @@
                 max-width: 95%;
             margin: auto;
             font-variant-caps: petite-caps;
-            font-size: 1em;
+            font-size: 1.5em;
 
         }
 
@@ -26,13 +26,13 @@
 
             background:
                 linear-gradient(to right, #F8ECDF 4px, transparent 4px) 0 0,
-                linear-gradient(to right, purple 4px, transparent 4px) 0 100%,
-                linear-gradient(to left, black 4px, transparent 4px) 100% 0,
-                linear-gradient(to left, black 4px, transparent 4px) 100% 100%,
-                linear-gradient(to bottom, black 4px, transparent 4px) 0 0,
-                linear-gradient(to bottom, black 4px, transparent 4px) 100% 0,
-                linear-gradient(to top, black 4px, transparent 4px) 0 100%,
-                linear-gradient(to top, black 4px, transparent 4px) 100% 100%;
+                linear-gradient(to right, #F8ECDF 4px, transparent 4px) 0 100%,
+                linear-gradient(to left, #F8ECDF 4px, transparent 4px) 100% 0,
+                linear-gradient(to left, #F8ECDF 4px, transparent 4px) 100% 100%,
+                linear-gradient(to bottom, #F8ECDF 4px, transparent 4px) 0 0,
+                linear-gradient(to bottom, #F8ECDF 4px, transparent 4px) 100% 0,
+                linear-gradient(to top, #F8ECDF 4px, transparent 4px) 0 100%,
+                linear-gradient(to top, #F8ECDF 4px, transparent 4px) 100% 100%;
 
             background-repeat: no-repeat;
             background-size: 20px 20px;
