--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -73,7 +73,8 @@ quotes=[
 "讀過的書，記得的成為知識，不記得的成為氣質。---未央"
 ];
 
-const INTERVAL = 86400000;
+const INTERVAL = 10;
+    //86400000
 
 function dispalyQuote(){
 
