--- a/quotes_daily.html
+++ b/quotes_daily.html
@@ -73,8 +73,7 @@ quotes=[
 "讀過的書，記得的成為知識，不記得的成為氣質。---未央"
 ];
 
-const INTERVAL = 1000;
-    //86400000
+const INTERVAL = 86400000;
 
 function dispalyQuote(){
 
